<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>


    <string name="download">Download</string>
    <string name="view_download_status">View Download Status</string>
    <string name="download_notification_channel_id">Download Channel</string>
    <string name="download_notification_channel_name">Downloads</string>
    <string name="no_repository_selected">No Repository Selected</string>
    <string name="download_is_ready">Download is Ready</string>
    <string name="ok">OK</string>
    <string name="status">Status:</string>
    <string name="file_name">File name:</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="close">close</string>
    <string name="settings">settings</string>
    <string name="download_complete">Download Complete</string>
    <string name="connection_dialog_message">Your file will download once your internet connection is restored</string>
</resources>
